--- a/TARge21Shop/TARge21Shop/appsettings.json
+++ b/TARge21Shop/TARge21Shop/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=TARge21Shop;Trusted_Connection=true;MultipleActiveResultSets=true"
+  }
 }
