--- a/TARge21Shop/TARge21Shop.Data/TARge21Shop.Data.csproj
+++ b/TARge21Shop/TARge21Shop.Data/TARge21Shop.Data.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.11" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TARge21Shop.Core\TARge21Shop.Core.csproj" />
+  </ItemGroup>
+
 </Project>
