--- a/TARge21Shop/TARge21Shop.ApplicationServices/TARge21Shop.ApplicationServices.csproj
+++ b/TARge21Shop/TARge21Shop.ApplicationServices/TARge21Shop.ApplicationServices.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
+    <ProjectReference Include="..\TARge21Shop.Data\TARge21Shop.Data.csproj" />
   </ItemGroup>
 
 </Project>
