--- a/TARge21Shop/TARge21Shop.ApplicationServices/TARge21Shop.ApplicationServices.csproj
+++ b/TARge21Shop/TARge21Shop.ApplicationServices/TARge21Shop.ApplicationServices.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\TARge21Shop.Data\TARge21Shop.Data.csproj" />
   </ItemGroup>
 
