--- a/TARge21Shop/TARge21Shop.ApplicationServices/TARge21Shop.ApplicationServices.csproj
+++ b/TARge21Shop/TARge21Shop.ApplicationServices/TARge21Shop.ApplicationServices.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.2.7" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+    <PackageReference Include="Nancy" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
