--- a/TARge21Shop/TARge21Shop.SpaceshipTest/TARge21Shop.SpaceshipTest.csproj
+++ b/TARge21Shop/TARge21Shop.SpaceshipTest/TARge21Shop.SpaceshipTest.csproj
@@ -23,7 +23,9 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   </ItemGroup>
-
+  <ItemGroup>
+	<FrameworkReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TARge21Shop.ApplicationServices\TARge21Shop.ApplicationServices.csproj" />
     <ProjectReference Include="..\TARge21Shop.Core\TARge21Shop.Core.csproj" />
